# livraria

./: pyproject.toml
config/: settings.py  urls.py
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options_livro.py  0004_livro_autores.py  0005_compra.py  0006_itenscompra.py
livraria/: models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py  0004_livro_autores.py
livraria/models/: autor.py  livro.py
livraria/serializers/: __init__.py  autor.py  categoria.py  editora.py  livro.py
livraria/views/: __init__.py  autor.py  categoria.py  editora.py  livro.py
